--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+*{
+  text-decoration: none;
+  color: azure;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
