agregado item ejemplo con contador

--- a/src/componentes/Main/style.css
+++ b/src/componentes/Main/style.css
@@ -1,5 +1,7 @@
 
 .lista-items{
-    width: 100%;
-    background-color: black;
+    margin-left: 38%;
+    margin-bottom: 100px;
+    width: 25%;
+    box-shadow: 5px 5px 0 -3px black, 5px 5px 0 -1px purple;
 }
