--- a/src/componentes/navBar/NavBar.css
+++ b/src/componentes/navBar/NavBar.css
@@ -6,7 +6,8 @@
     align-items: center;
     justify-content: space-between;
     background-color: black;
-
+    border-bottom: solid 1px purple;
+    margin-bottom: 1rem;
 }
 .navMenu{
     list-style-type: none;
