--- a/src/componentes/Item/Item.css
+++ b/src/componentes/Item/Item.css
@@ -1,3 +1,8 @@
 .diskCover{
     width: 200px;
 }
+.itemCard{
+    margin: 2%;
+    box-shadow: 5px 5px 0 -3px black, 5px 5px 0 -1px purple;
+    width: 20%;
+}
