--- a/src/componentes/navBar/NavBar.css
+++ b/src/componentes/navBar/NavBar.css
@@ -1,5 +1,4 @@
 .navbar-container{
-    width: 100%;
     height: 75px;
     display: flex;
     flex-direction: row;
@@ -30,4 +29,8 @@ li{
 .user{
     display: flex;
     align-items: center;
+}
+.seleccionado{
+    font-weight: 600;
+    border-bottom: 1px solid purple;
 }
